<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <Button
                android:id="@+id/add_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pictureMake"
                android:text="@string/add_image"
                android:layout_gravity="center"
                android:textSize="10dp"
                android:layout_marginRight="@dimen/default_margin"/>
            <ImageView
                android:id="@+id/detail_item_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/image"
                 />

        </LinearLayout>

        <EditText
            android:id="@+id/imput_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/add_recipe_name"
            android:paddingLeft="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_categorie"/>
            <Spinner
                android:id="@+id/categorie_choose"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:entries="@array/categorie"
                android:paddingLeft="20dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_difficulte"/>
            <Spinner
                android:id="@+id/difficulty_choose"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:entries="@array/difficulte"
                android:paddingLeft="20dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/default_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_recipe_ingredient"/>

            <ImageView
                android:id="@+id/add_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_new" />
            <LinearLayout
                android:id="@+id/ingredient_layout"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/add_duration_preparation"/>
                <NumberPicker
                    android:id="@+id/preparation_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="40dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/add_duration_cuisson"/>
                <NumberPicker
                    android:id="@+id/cuisson_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_recipe_preparation"/>

            <ImageView
                android:id="@+id/add_preparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_new" />
            <LinearLayout
                android:id="@+id/preparation_layout"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <TextView
            android:id="@+id/information_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:textColor="#ff0000"/>

        <Button
            android:id="@+id/validation_button"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/add_recipe_confirm"
            android:textColor="#fff"
            android:background="#000"/>

    </LinearLayout>
</ScrollView>