<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:iconTint="#000"
        android:id="@+id/new_recipe"
        android:icon="@drawable/ic_add_new"
        android:title="@string/add_new_recipe"
        app:showAsAction="ifRoom|withText"/>
</menu>